--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+/* Global styles */
+body {
+    margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #f8f8f8;
+    padding: 20px;
+  }
+  
